tests/deploy_errors/connector_no_kind/error.txt
Error: 
    1 | define connector empty;
      |                       ^ Found the token `;` but expected `from`
    2 | 
    3 | deploy fake